--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
+    "react-spinners": "^0.15.0",
+    "react-tag-input-component": "^2.0.2",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
