--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-spinners": "^0.15.0",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.0",
     "recharts": "^2.15.1",
     "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.9"
