--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "react-router": "^7.2.0",
     "react-spinners": "^0.15.0",
     "react-tag-input-component": "^2.0.2",
