--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-modern-drawer": "^1.4.0",
     "react-paginate": "^8.3.0",
     "react-router": "^7.2.0",
     "react-spinners": "^0.15.0",
-    "react-tag-input-component": "^2.0.2",
+    "react-tag-autocomplete": "^6.3.0",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.0",
     "recharts": "^2.15.1",
