--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@tanstack/react-query": "^5.66.9",
     "axios": "^1.8.1",
     "firebase": "^11.4.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-modern-drawer": "^1.4.0",
